# QMines

./: .gitignore  README.md  TODO  notes.txt  pyproject.toml  pyrightconfig.json  ruff.toml  todo.txt
qmines/: game_parameters.py  mainwindow.py  mainwindowcheck.py  symbols.py
qmines/board/: board.py  board_tile.py
qmines/context/: application_context.py
qmines/control_elements/: mine_counter.py  pause_button.py  time_tracker.py
qmines/main_window/: game_over_types.py  main_window.py
qmines/sandbox/: check_and_click.py  disabled_button.py  flat_button.py  params_import.py
src/qmines/: __init__.py  __main__.py  application.py  common.py  config.py  constants.py  enums.py  global_state.py  main_window.py  mainwindow.py  state_processor.py  toolbar.py  utilities.py
src/qmines/application/: about_message.py  application.py  game_over_message.py  mainwindow.py  pause_view.py  start_over_message.py
src/qmines/board/: board.py  board_view.py  tile.py
src/qmines/control_panel/: control_panel.py  mine_counter.py  new_game_button.py  new_game_dialog.py  pause_button.py  time_tracker.py
src/qmines/controls/: actions.py  control_manager.py  menubar.py  toolbar.py  toolbar_view.py
src/qmines/dialog/game_over/: game_over_dialog.py
src/qmines/dialog/new_game/: custom_mode.py  hardcore_mode.py  mode_selector_buttons.py  new_game_dialog.py
src/qmines/game_parameters/: game_parameters.py  settings_reader.py
src/qmines/grid/: abstract_grid.py
src/qmines/new_game_selector/: buttons.py  custom_mode_selector.py  new_game_dialog.py  new_game_selector.py  new_game_view.py
src/qmines/resources/: settings.json
src/qmines/state/: config.py  settings.py  singleton.py  state_manager.py
src/qmines/status_bar/: mine_counter.py  status_bar.py  status_text.py  time_tracker.py
src/qmines/tile/: tile.py  tile_icons.py  tile_view.py
src/qmines/toolbar/: actions.py  counters.py  pause.py  toolbar.py  toolbar_view.py
src/qmines/utilities/: __init__.py  constants.py  index_tools.py
test_data/settings/: settings.json  settings_bad.json
tests/: test_config.py  test_game_parameters.py  test_grid.py  test_utilities.py
