[project]
name = "qmines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bence Racskó", email = "bracsko94@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.9.1",
]

[project.scripts]
qmines = "qmines:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.12.1",
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
pythonVersion = "3.13"

typeCheckingMode = "standard"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportPropertyTypeMismatch = "error"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"
reportPrivateUsage = "error"
reportDeprecated = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportImplicitOverride = "warning"

executionEnvironments = [
  { root = "src" }
]
