[project]
name = "qmines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bence Racskó", email = "bracsko94@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
qmines = "qmines:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
