[project]
name = "qmines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bence Racskó", email = "bracsko94@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.9.2",
]

[project.scripts]
qmines = "qmines:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.405",
    "ruff>=0.13.2",
]
